--- a/trunk/ressourcen/jd/languages/Serbian(latin).lng
+++ b/trunk/ressourcen/jd/languages/Serbian(latin).lng
@@ -1,5 +1,5 @@
-﻿$translater$ = Gorštak
-$version$ = 1.0.936
+$translater$ = Gorštak
+$version$ = 1.0.936.2
 addons.jdgrowlnotification.menu = Growl poruke
 addons.jdshutdown.menu = Isključi računar po završetku preuzimanja
 addons.jdshutdown.statusmessage.disabled = Računar NEĆE biti isključen nakon preuzimanja
@@ -117,8 +117,6 @@ gui.component.textarea.context.delete = Izbriši
 gui.component.textarea.context.paste = Nalepi
 gui.config.addons.install.tab = Instalacije i nadogradnje
 gui.config.addons.settings.tab = Postavke
-gui.config.btn_fengshui = Jednostavan pregled
-gui.config.btn_restart = Sačuvaj i ponovo pokreni
 gui.config.captcha.jac_disable = Onemogući automatsko prepoznavanje potvrdnog koda
 gui.config.captcha.train.level = Prag prikaza
 gui.config.captcha.train.level.instanthelp = http://jdownloader.org/wiki/index.php?title=Captchafenster_abschalten_%26_Anzeigeschwelle
@@ -186,7 +184,6 @@ gui.config.general.todowithdownloads.never = nikad
 gui.config.general.todowithdownloads.packageready = kada je paket spreman
 gui.config.general.webupdate.auto = Automatski pokreni nadogradnju
 gui.config.general.webupdate.disable = Nadogradi samo na zahtev korisnika
-gui.config.gui.autopackagelimit = Prag za automatsko stvaranje paketa
 gui.config.gui.browser = Pregledač
 gui.config.gui.container.tab = Veze za preuzimanje
 gui.config.gui.custom_browser = Putanja pregledača
@@ -268,6 +265,10 @@ gui.config.routeripfinder.close = Zatvori prozor
 gui.config.routeripfinder.featchip = Utvrđivanje imena vašeg rutera
 gui.config.routeripfinder.notfound = Ime vašeg rutera nije pronađeno
 gui.config.routeripfinder.ready = Pronađeno ime: %s
+gui.config.save.doyourealywant = Da li želite da sačuvate promene?
+gui.config.save.doyourealywant.title = Promene
+gui.config.save.restart = Potrebno je ponovno pokretanje JDownloader-а da bi promene stupile na snagu.\r\nPonovo pokrenuti sada?
+gui.config.save.restart.title = Zatraženo je ponovno pokretanje JDownloader-а
 gui.config.showcontaineronloadinfo = Prikaži detaljne informacije o kontejneru po učitavanju
 gui.config.showcontaineronloadinfo.helpurl = http://jdownloader.org/knowledge/wiki/start
 gui.config.tablables.addons = Upravljač dodacima
@@ -280,7 +281,6 @@ gui.config.tablables.gui = Sučelje
 gui.config.tablables.hostplugin = Postavke priključka za domaćine
 gui.config.tablables.jac = Postavke očitavanja potvrdnog koda
 gui.config.tablables.reconnect = Postavke ponovnog uspostavljanja veze
-gui.config.title = Podešavanje
 gui.config.unrar.ask_path = Pitati za nepoznate šifre?
 gui.config.unrar.cmd = Naredba UnRAR
 gui.config.unrar.deep_extract = Duboko raspakivanje
@@ -292,7 +292,6 @@ gui.config.unrar.subpath = Podputanja
 gui.config.unrar.subpath_minnum = Podputanju koristi samo ako arhiva sadrži više od x datoteka
 gui.config.unrar.use_extractto = Koristi proizvoljnu putanju za raspakivanje
 gui.config.unrar.use_subpath = Koristi podputanju
-gui.configdialog.wikilink.theconfigurationmenu = http://jdownloader.org/knowledge/wiki/gui/configuration/advanced-view/overview
 gui.dialog.about.chat = Ćaskanje
 gui.dialog.about.chaturl = http://www.jdownloader.org/support?lng=en
 gui.dialog.about.email = E-pošta
@@ -401,7 +400,7 @@ gui.linkgrabber.menu.edit.removeofflineall = Ukloni neispravne veze (sve)
 gui.linkgrabber.menu.edit.removepackage = Ukloni paket
 gui.linkgrabber.menu.edit.splitbyhost = Podeli pakete po domaćinima
 gui.linkgrabber.menu.extras = Dodatno
-gui.linkgrabber.menu.extras.autopackage = Automatsko pakiranje
+gui.linkgrabber.menu.extras.autopackage = Automatsko pakovanje
 gui.linkgrabber.menu.extras.startafteradding = Automatski pokreni preuzimanja
 gui.linkgrabber.menu.hostselection = Odabir domaćina
 gui.linkgrabber.menu.hostselectionmore = Još domaćina
@@ -412,6 +411,8 @@ gui.linkgrabber.menu.selection.free = Slobodno
 gui.linkgrabber.menu.selection.mirror = Odabir servera
 gui.linkgrabber.menu.selection.premium = Premijum
 gui.linkgrabber.menu.selection.priority = Prioritet
+gui.linkgrabber.package.unchecked = neprovereno
+gui.linkgrabber.package.unsorted = razno
 gui.linkgrabber.packagetab.chb.extractafterdownload = Raspakuj
 gui.linkgrabber.packagetab.chb.usesubdirectory = Koristi podfasciklu
 gui.linkgrabber.packagetab.lbl.comment = Primedba
@@ -425,8 +426,8 @@ gui.linkgrabber.packagetab.table.column.link = Veza
 gui.linkgrabber.packagetab.table.column.size = Veličina
 gui.linkgrabber.packagetab.table.context.delete = Ukloni
 gui.linkgrabber.packagetab.table.context.newpackage = Novi paket
-gui.linkgrabber.packagetab.toggleview1 = Prošireno
-gui.linkgrabber.packagetab.toggleview2 = Jednostavno
+gui.linkgrabber.packagetab.toggleview1 = Više
+gui.linkgrabber.packagetab.toggleview2 = Manje
 gui.linkgrabber.password = Šifra arhive.
 gui.linkgrabber.pos.bottom = Dno
 gui.linkgrabber.pos.top = Vrh
@@ -630,6 +631,7 @@ gui.support.wikiurl = http://wiki.jdownloader.org
 gui.tab.plugin_activity.column_plugin = Modul
 gui.tab.plugin_activity.column_progress = Napredak
 gui.table.contextmenu.browselink = Otvori u pretraživaču
+gui.table.contextmenu.copylink = Umnoži adresu veze
 gui.table.contextmenu.copypassword = Umnoži šifru
 gui.table.contextmenu.delete = Izbriši
 gui.table.contextmenu.disable = Onemogući
@@ -678,7 +680,7 @@ gui.treetable.packall = Zapakuj sve kolone
 gui.treetable.packselected = Zapakuj označenu kolonu
 gui.treetable.part.label = Datoteka
 gui.treetable.part.label_update = Nadogradnja
-gui.treetable.parts = Delovi
+gui.treetable.parts = Delova
 gui.warning.reconnect.close = Zatvori prozor
 gui.warning.reconnect.hasbeendisabled = Onemogućeno ponovno uspostavljanje veze!
 gui.warning.reconnect.hasbeendisabled.tooltip = Da biste dozvolili JDownloader-u da automatski ponovo uspostavlja vezu trebali biste omogućiti ovu opciju!
@@ -1218,4 +1220,3 @@ wrapper.webupdate.updateupdater = Preuzmi nadograđivač
 wrapper.webupdate.updateupdater.error_crc = CRC Greška pri preuzimanju jdupdate.jar
 wrapper.webupdate.updateupdater.error_rename = Nemoguće preimenovati jdupdate.jar.tmp u jdupdate.jar
 wrapper.webupdate.updateupdater.error_reqeust = Nemoguće preuzeti jdupdate.jar
-
