--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -402,6 +402,10 @@ gui.linkgrabber.btn.acceptall = Akceptuj wszystkie
 gui.linkgrabber.btn.sortpackages = Sortuj linki
 gui.linkgrabber.checkstatus = Trwa sprawdzanie online...
 gui.linkgrabber.cmb.insertatposition = Wstaw na:
+gui.linkgrabber.header.hoster = Hosting
+gui.linkgrabber.header.size = Rozmiar
+gui.linkgrabber.header.status = Stan
+gui.linkgrabber.header.treeandfiles = Pakiety/Pliki
 gui.linkgrabber.lbl.isoffline = [offline]
 gui.linkgrabber.lbl.isonline = [online]
 gui.linkgrabber.lbl.newpackage = Nowy pakiet
@@ -625,6 +629,7 @@ gui.packageinfo.password = Hasło
 gui.packageinfo.rate = Odświeżanie
 gui.packageinfo.title = Informacje o pakiecie: 
 gui.plugins.decrypt.askclicknload = Wtyczka rozszyfrowująca %s jest już przestarzała, lecz jest możliwość obsługi poprzez Click'n'Load. Otworzyć stronę WWW teraz?
+gui.progresspane.title = %s moduły/ów w trakcie działania
 gui.reconnect.confirm = Czy chcesz ponownie nawiązać połączenie?
 gui.reconnect.failed = Ponowne nawiązanie połączenia nie powiodło się
 gui.reconnect.success = Ponowne nawiązanie połączenia powiodło się
@@ -669,6 +674,11 @@ gui.table.draganddrop.insertinpackageend = Wstaw pakiet %s na koniec
 gui.table.draganddrop.insertinpackagestart = Wstaw pakiet %s na początek
 gui.table.draganddrop.movepackagebefore = Wstaw pakiet %s przed
 gui.table.draganddrop.movepackageend = Wstaw pakiet %s po
+gui.task.config.save = Zapisz zmiany
+gui.taskpanes.configuration = Ustawienia
+gui.taskpanes.download = Pobieranie
+gui.taskpanes.download.info = Kliknij przycisk Start/Stop \r\n\ w pasku narzędzi \r\n by rozpocząć pobieranie
+gui.taskpanes.linkgrabber = Zbieracz Linków
 gui.textcomponent.context.copy = Kopiuj
 gui.textcomponent.context.copy.acc = ctrl C
 gui.textcomponent.context.cut = Wytnij
