--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -455,6 +455,8 @@ gui.linkgrabber.tabs.context.deleteothers = Usuń wszystkie pozostałe
 gui.linkgrabber.tabs.context.newpackage = Nowy pakiet
 gui.linkgrabber.title = Zbieracz linków aktywny (D&D + Schowek %s Link(ów) w %s Pakiet(ach)
 gui.linkgrabber.waitinguserio = Oczekiwanie na dane od użytkownika
+gui.linkgrabberv2.addall = Dodaj wszystkie pakiety
+gui.linkgrabberv2.addselected = Dodaj wybrane pakiety
 gui.linkinfo.available = Dostępność
 gui.linkinfo.available.notchecked = nie sprawdzony
 gui.linkinfo.available.ok = Jest
@@ -677,7 +679,7 @@ gui.table.draganddrop.movepackageend = Wstaw pakiet %s po
 gui.task.config.save = Zapisz zmiany
 gui.taskpanes.configuration = Ustawienia
 gui.taskpanes.download = Pobieranie
-gui.taskpanes.download.info = Kliknij przycisk Start/Stop \r\n\ w pasku narzędzi \r\n by rozpocząć pobieranie
+gui.taskpanes.download.info = Kliknij przycisk Start/Stop \r\n w pasku narzędzi, \r\n aby rozpocząć pobieranie
 gui.taskpanes.linkgrabber = Zbieracz Linków
 gui.textcomponent.context.copy = Kopiuj
 gui.textcomponent.context.copy.acc = ctrl C
